force-app/main/default/objects/Product2/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <label>Costo YTD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>