force-app/main/default/objects/Product2/fields/Costo_A_OANTERIOR__c.field-meta.xml
<CustomField>
    <fullName>Costo_A_OANTERIOR__c</fullName>
    <label>Costo LY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>